[package]
name = "filenameSearcher"
version = "0.1.0"
edition = "2021"
authors = ["Timur Schmidt <aydin.sch@outlook.com>"]

# External dependency for "walkdir": https://crates.io/crates/walkdir; Dependency for "tokio": https://tokio.rs
[dependencies]
ignore = "0.4.22"
tokio = { version = "1.39.2", features = ["full"] }

[profile.release]
debug = true